_sass/global.sass
@import "syntax"
@import "_bits"

*
  box-sizing: border-box

html
  font-family: "Avenir Next", Avenir, "Helvetica Neue", Helvetica, sans-serif
  font-size: 137.5% // 22px

  @include mq("large")
    font-size: 175% // 28px

body
  margin: 0 auto
  max-width: 30em
  padding: 0 1em

h1,
h2
  font-weight: 400

  a
    color: inherit

a
  color: $blue
  text-decoration: none

  &:hover
    color: darken($blue, 15%)

figure
  margin: 1em 0

figcaption
  margin: 0 auto
  max-width: 45em

img
  max-width: 100%

code
  font-size: 1.25em

pre
  overflow-x: scroll

.main-nav
  margin: 1em
  text-align: center

  @include mq("small")
    text-align: left

.nav-item
  text-decoration: none

  @include mq("small")
    display: block

  &::after
    color: black
    content: "/"
    display: inline-block
    margin: 0 0.5em
    pointer-events: none

    @include mq("small")
      display: none
  
  &:last-of-type::after
    display: none

.tagline
  font-family: Georgia, serif
  font-size: 2em
  font-style: italic
  margin: 0
  pointer-events: none
  text-align: center

  @include mq("medium")
    font-size: 1.5em
  
  @include mq("small")
    font-size: 1.2em
    margin-bottom: 2em

  .big,
  .biggest
    display: block
    font-family: "Open Sans" 
    font-style: normal
    font-variant: small-caps
    font-weight: 700
    margin-top: -0.5em
    margin-bottom: -0.2em

.main-footer
  display: flex
  margin-top: 1.5em

  @include mq("medium")
    display: block
    text-align: center

.reference
  border-bottom: 6px solid transparent
  display: block
  flex: 1
  padding-bottom: 0.5em

  &:hover
    border-bottom: 6px solid $green
  
  @include mq("medium")
    border-bottom: none
    display: block
    margin: 1em 0
    padding: 0

    &:hover
      border-right: 6px solid $green
      border-bottom: none
      border-left: 6px solid $green

.reference-name
  color: black
  font-size: 1em
  margin: 0

.reference-location
  font-size: 0.8em
  font-weight: 600

.copyright
  font-size: 0.7em
  margin: 1em 0
  text-align: center

.big
  font-size: 4em

.biggest
  font-size: 7.5em

.button
  background-color: #67f084
  border-radius: 4px
  box-shadow: 0 5px darken(#67f084, 20%)
  color: white
  display: inline-block
  font-size: 1.5em
  font-variant: small-caps
  letter-spacing: 6px
  padding: 0.25em 1.5em
  text-align: center
  text-transform: lowercase

  &:hover
    box-shadow: 0 2px darken(#67f084, 20%)
    color: white
    transform: translateY(3px)
  
  &:active
    box-shadow: none
    transform: translateY(5px)

.centred
  margin: inherit auto
  text-align: center

.highlight
  padding: 0.5em 1em
  padding-top: 2em
  position: relative

  code::before
    background: $green 
    color: white
    content: attr(class)
    padding: 0.5em 1em
    position: absolute
    top: 0
    right: 0
    left: 0

